package logica.exception;

public class ExcepcionAjedrez extends Exception {
    public ExcepcionAjedrez(String mensaje) {
        super(mensaje);
    }
}
