package logica.exception;

public class ExcepcionEnMovimientoEnL extends ExcepcionEnMovimiento {
    public ExcepcionEnMovimientoEnL(String mensaje) {
        super(mensaje);
    }
}
