package logica.exception;

public class ExcepcionEnMovimientoHorizontal extends ExcepcionEnMovimiento {
    public ExcepcionEnMovimientoHorizontal(String message) {
        super(message);
    }
}
