package logica.exception;

public class ExcepcionInexistenciaDeUnaPieza extends ExcepcionMinimaDeMovimiento {
    public ExcepcionInexistenciaDeUnaPieza(String mensaje) {
        super(mensaje);
    }

}
